--- a/TestCalendar/Test Calendar/ShowDetail.storyboard
+++ b/TestCalendar/Test Calendar/ShowDetail.storyboard
@@ -62,32 +62,40 @@
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V1p-CE-J69" customClass="WatchView" customModule="Test_Calendar" customModuleProvider="target">
                                 <rect key="frame" x="32" y="137" width="311" height="313.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJa-8Z-FOS">
+                                        <rect key="frame" x="267" y="269.5" width="44" height="44"/>
+                                        <color key="backgroundColor" red="0.068248678470000004" green="0.97196739909999996" blue="0.43760405969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="44" id="BB6-Xx-MVr"/>
+                                            <constraint firstAttribute="width" secondItem="HJa-8Z-FOS" secondAttribute="height" multiplier="1:1" id="mXE-sX-eZo"/>
+                                        </constraints>
+                                        <state key="normal" title="PM"/>
+                                        <connections>
+                                            <action selector="showPm:" destination="T8y-eI-bGT" eventType="touchUpInside" id="ZIS-wK-f36"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eR-dC-9SP">
+                                        <rect key="frame" x="0.0" y="269.5" width="44" height="44"/>
+                                        <color key="backgroundColor" red="0.068248678470000004" green="0.97196739909999996" blue="0.43760405969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="2eR-dC-9SP" secondAttribute="height" multiplier="1:1" id="7Nx-RF-e7l"/>
+                                            <constraint firstAttribute="width" constant="44" id="bEk-H5-mhY"/>
+                                        </constraints>
+                                        <state key="normal" title="AM"/>
+                                        <connections>
+                                            <action selector="showAm:" destination="T8y-eI-bGT" eventType="touchUpInside" id="Jvv-O9-qSP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="HJa-8Z-FOS" firstAttribute="bottom" secondItem="V1p-CE-J69" secondAttribute="bottom" id="GXc-FD-33r"/>
+                                    <constraint firstItem="HJa-8Z-FOS" firstAttribute="trailing" secondItem="V1p-CE-J69" secondAttribute="trailing" id="HHu-NF-aeP"/>
+                                    <constraint firstItem="2eR-dC-9SP" firstAttribute="leading" secondItem="V1p-CE-J69" secondAttribute="leading" id="Moq-jz-ffT"/>
+                                    <constraint firstItem="2eR-dC-9SP" firstAttribute="bottom" secondItem="V1p-CE-J69" secondAttribute="bottom" id="Sfk-CZ-Cxh"/>
+                                </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eR-dC-9SP">
-                                <rect key="frame" x="32" y="421.5" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.068248678470000004" green="0.97196739909999996" blue="0.43760405969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="2eR-dC-9SP" secondAttribute="height" multiplier="1:1" id="7Nx-RF-e7l"/>
-                                    <constraint firstAttribute="width" constant="44" id="bEk-H5-mhY"/>
-                                </constraints>
-                                <state key="normal" title="AM"/>
-                                <connections>
-                                    <action selector="showAm:" destination="T8y-eI-bGT" eventType="touchUpInside" id="Jvv-O9-qSP"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJa-8Z-FOS">
-                                <rect key="frame" x="299" y="421.5" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.068248678470000004" green="0.97196739909999996" blue="0.43760405969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="44" id="BB6-Xx-MVr"/>
-                                    <constraint firstAttribute="width" secondItem="HJa-8Z-FOS" secondAttribute="height" multiplier="1:1" id="mXE-sX-eZo"/>
-                                </constraints>
-                                <state key="normal" title="PM"/>
-                                <connections>
-                                    <action selector="showPm:" destination="T8y-eI-bGT" eventType="touchUpInside" id="ZIS-wK-f36"/>
-                                </connections>
-                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Lsf-mT-2yM">
                                 <rect key="frame" x="15" y="466" width="345" height="187"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -152,7 +160,6 @@
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="HJa-8Z-FOS" firstAttribute="bottom" secondItem="V1p-CE-J69" secondAttribute="bottom" constant="15" id="AF6-be-whc"/>
                             <constraint firstItem="Bcr-wh-POW" firstAttribute="top" secondItem="a9N-A8-CZ4" secondAttribute="bottom" constant="33" id="BYe-oW-hSM"/>
                             <constraint firstItem="V1p-CE-J69" firstAttribute="height" secondItem="tJ8-WG-39o" secondAttribute="height" multiplier="0.47" id="D4D-DC-KrT"/>
                             <constraint firstItem="DQS-cK-nUq" firstAttribute="top" secondItem="a9N-A8-CZ4" secondAttribute="bottom" constant="38" id="HGx-bD-fmZ"/>
@@ -160,16 +167,13 @@
                             <constraint firstItem="Lsf-mT-2yM" firstAttribute="leading" secondItem="tJ8-WG-39o" secondAttribute="leading" constant="15" id="Hh3-mq-UKK"/>
                             <constraint firstItem="ygD-TG-xoW" firstAttribute="top" secondItem="Lsf-mT-2yM" secondAttribute="bottom" constant="14" id="Nwl-O4-yJz"/>
                             <constraint firstItem="DQS-cK-nUq" firstAttribute="centerX" secondItem="tJ8-WG-39o" secondAttribute="centerX" id="S2x-l9-jL4"/>
-                            <constraint firstItem="2eR-dC-9SP" firstAttribute="bottom" secondItem="V1p-CE-J69" secondAttribute="bottom" constant="15" id="h4g-tU-Z31"/>
                             <constraint firstItem="V1p-CE-J69" firstAttribute="width" secondItem="tJ8-WG-39o" secondAttribute="width" multiplier="0.83" id="myA-Yi-n01"/>
                             <constraint firstItem="V1p-CE-J69" firstAttribute="top" secondItem="Pl0-9P-Twh" secondAttribute="bottom" constant="9" id="oNj-zr-N4g"/>
                             <constraint firstAttribute="trailing" secondItem="Lsf-mT-2yM" secondAttribute="trailing" constant="15" id="oy4-Jb-PRA"/>
                             <constraint firstItem="DQS-cK-nUq" firstAttribute="leading" secondItem="Pl0-9P-Twh" secondAttribute="trailing" constant="53" id="pNS-PJ-dI5"/>
                             <constraint firstItem="V1p-CE-J69" firstAttribute="centerX" secondItem="tJ8-WG-39o" secondAttribute="centerX" id="qro-cS-cCe"/>
-                            <constraint firstItem="HJa-8Z-FOS" firstAttribute="trailing" secondItem="V1p-CE-J69" secondAttribute="trailing" id="wfl-NJ-zSj"/>
                             <constraint firstItem="Pl0-9P-Twh" firstAttribute="top" secondItem="a9N-A8-CZ4" secondAttribute="bottom" constant="34" id="wk1-bt-3vE"/>
                             <constraint firstItem="Lsf-mT-2yM" firstAttribute="height" secondItem="tJ8-WG-39o" secondAttribute="height" multiplier="0.28" id="yiT-hX-fOW"/>
-                            <constraint firstItem="2eR-dC-9SP" firstAttribute="leading" secondItem="V1p-CE-J69" secondAttribute="leading" id="zZ9-m5-6dy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="D0v-p7-cr0"/>
@@ -414,6 +418,14 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ntI-Oj-8M2">
+                                <rect key="frame" x="127" y="49" width="121" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
