--- a/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
+++ b/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
@@ -64,7 +64,7 @@
                                         <rect key="frame" x="0.0" y="28" width="345" height="111"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rsj-DT-8Qa" id="qmo-EK-Mni">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="111"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="110.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZVa-1x-XwW" userLabel="ColorIcon">
@@ -169,7 +169,7 @@
                                         <rect key="frame" x="0.0" y="139" width="345" height="48"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RKc-J9-Hxp" id="Dqg-Ur-mdS">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="48"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="47.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="add" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nn4-6y-rBs">
@@ -510,7 +510,7 @@
         <!--Table View Controller-->
         <scene sceneID="ceT-lw-LND">
             <objects>
-                <tableViewController id="kIY-Qm-Y2B" sceneMemberID="viewController">
+                <tableViewController id="kIY-Qm-Y2B" customClass="TableViewController" customModule="Test_Calendar" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="kOE-fD-tJ8">
                         <rect key="frame" x="0.0" y="0.0" width="345" height="447"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -522,7 +522,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="whf-hl-ykf" id="pTK-Fs-rmc">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="73.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="科目名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k8q-Ll-9Mq" userLabel="Subject Name">
@@ -545,7 +545,7 @@
                                         <rect key="frame" x="0.0" y="74" width="345" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g1w-DK-jAJ" id="HBN-0M-Enk">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="73.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="P4l-fX-Gtb">
@@ -558,6 +558,9 @@
                                                         <segment title="テスト"/>
                                                         <segment title="レポート"/>
                                                     </segments>
+                                                    <connections>
+                                                        <action selector="SelectButton:" destination="kIY-Qm-Y2B" eventType="valueChanged" id="Ul3-rn-Pmv"/>
+                                                    </connections>
                                                 </segmentedControl>
                                             </subviews>
                                             <constraints>
@@ -570,7 +573,7 @@
                                         <rect key="frame" x="0.0" y="148" width="345" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HWP-zZ-qZZ" id="Byv-xk-B7Q">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="73.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7TS-0l-LhL">
@@ -606,7 +609,7 @@
                                         <rect key="frame" x="0.0" y="222" width="345" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ujz-e6-YGW" id="cMM-rB-sKs">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="73.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通知" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aia-4x-MUP">
@@ -630,18 +633,18 @@
                                         <rect key="frame" x="0.0" y="296" width="345" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9eT-V3-bld" id="2WA-CI-xfg">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="73.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ee4-OR-5lf">
-                                                    <rect key="frame" x="15" y="27" width="34" height="20"/>
+                                                    <rect key="frame" x="15" y="27" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="foF-oo-a6a">
-                                                    <rect key="frame" x="286" y="27" width="44" height="20"/>
+                                                    <rect key="frame" x="286" y="27" width="44" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -654,7 +657,7 @@
                                         <rect key="frame" x="0.0" y="370" width="345" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4mP-lw-blV" id="a4k-iQ-dIJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="140"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="139.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vbu-aD-TIi">
@@ -673,18 +676,18 @@
                                         <rect key="frame" x="0.0" y="510" width="345" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SR4-Us-mhU" id="XVV-cp-xz4">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="94K-j7-l6q">
-                                                    <rect key="frame" x="15" y="12" width="34" height="20"/>
+                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="k0v-00-xin">
-                                                    <rect key="frame" x="286" y="12" width="44" height="20"/>
+                                                    <rect key="frame" x="286" y="12" width="44" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -697,14 +700,17 @@
                                         <rect key="frame" x="0.0" y="554" width="345" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lN4-Vr-NtX" id="8Ce-IN-DGF">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="140"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="139.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="TZO-Fn-onN">
+                                                <datePicker tag="99" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="TZO-Fn-onN">
                                                     <rect key="frame" x="0.0" y="-19" width="345" height="139"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="527151546.243056">
                                                         <!--2017-09-15 06:59:06 +0000-->
                                                     </date>
+                                                    <connections>
+                                                        <action selector="dateAction:" destination="kIY-Qm-Y2B" eventType="valueChanged" id="yO2-P6-KGM"/>
+                                                    </connections>
                                                 </datePicker>
                                             </subviews>
                                             <constraints>
@@ -724,6 +730,17 @@
                         </connections>
                     </tableView>
                     <extendedEdge key="edgesForExtendedLayout"/>
+                    <connections>
+                        <outlet property="DateDetail" destination="k0v-00-xin" id="Vwd-tj-Fus"/>
+                        <outlet property="DatePicker" destination="TZO-Fn-onN" id="dhH-at-Bh4"/>
+                        <outlet property="FateDetail" destination="k0v-00-xin" id="jYb-I0-nfL"/>
+                        <outlet property="SelectButton" destination="P4l-fX-Gtb" id="XyS-tz-p7S"/>
+                        <outlet property="SubjectName" destination="k8q-Ll-9Mq" id="nqD-xj-Bjb"/>
+                        <outlet property="SubjectNameView" destination="k8q-Ll-9Mq" id="e37-wG-TUU"/>
+                        <outlet property="TimeDetail" destination="foF-oo-a6a" id="oai-mg-AZp"/>
+                        <outlet property="TimePicker" destination="foF-oo-a6a" id="wmh-UI-qr2"/>
+                        <outlet property="dateAction" destination="TZO-Fn-onN" id="ftW-TZ-eAw"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hGZ-6a-bIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
